fixed out of stock not showing

--- a/frontend/src/components/css/login.css
+++ b/frontend/src/components/css/login.css
@@ -109,5 +109,5 @@ input[type='submit']:hover {
 }
 
 .container {
-  font-family: 'Poppins' sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
